added new compo

--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
 
-/* * {
-    font-family: "Poppins", sans-serif;
-} */
+body{
+   background: #FBF9EE;
+}
 
 html {
   scroll-behavior: smooth;
